--- a/_config.yml
+++ b/_config.yml
@@ -23,5 +23,5 @@ me:
   linkedin:   211323021
   googleplus: 101109760577750566740
   github:     l4ci
-  dribbble:   l4ci
+  dribbble:   hellovolker
   pinboard:   l4ci
