--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@
 codekit-config.json
 *.psd
 .DS_Store
+
+# Node.js dependencies
+node_modules/
+package-lock.json
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
