chore: add Jekyll Gemfile and update gitignore
- Add Gemfile for local Jekyll development
- Configure GitHub Pages gem for compatibility
- Update .gitignore for Ruby/Jekyll dependencies
- Enable local testing with bundle exec jekyll serve

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,10 @@ package-lock.json
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ruby/Jekyll dependencies
+Gemfile.lock
+.bundle/
+vendor/
+.jekyll-cache/
+.sass-cache/
